# mtg-cube-builder

./: .gitignore  pyproject.toml
src/: cards.py  main.py
